--- a/adrApp/static/css/style.css
+++ b/adrApp/static/css/style.css
@@ -1539,3 +1539,94 @@ html {
         padding: 1.8rem;
     }
 }
+
+
+
+
+
+
+/* Calendar Container */
+.calendar-container {
+    display: inline-block;
+    width: 100%;
+    max-width: 350px;
+    margin-bottom: 30px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+}
+
+/* Calendar Header */
+.calendar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#month-year {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+/* Navigation buttons */
+.prev-month, .next-month {
+    font-size: 18px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0 10px;
+    transition: color 0.3s ease;
+}
+
+.prev-month:hover, .next-month:hover {
+    color: #007bff;
+}
+
+/* Calendar Weekdays */
+.calendar-weekdays {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    margin-bottom: 10px;
+}
+
+.calendar-weekdays span {
+    font-weight: bold;
+    color: #6c757d;
+    text-align: center;
+}
+
+/* Days Grid */
+.calendar-days-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 5px;
+}
+
+/* Individual Day Cells */
+.calendar-day, .calendar-day-empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.calendar-day:hover {
+    background-color: #007bff;
+    color: #fff;
+}
+
+.calendar-day-empty {
+    background-color: transparent;
+}
+
+.calendar-day.selected {
+    background-color: #007bff;
+    color: #fff;
+}
+
