--- a/adrApp/templates/asambleja.html
+++ b/adrApp/templates/asambleja.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<section class="axhendaevente">
+<!-- <section class="axhendaevente">
     <div class="container">
         {% for anetar in anetaret_aktive %}
         <div class="row">
@@ -21,5 +21,5 @@
                 {% endfor %}
         </div>
     </div>
-</section>
+</section> -->
 {% endblock content %}
